website/versioned_docs/version-2.0.x/docs/writing-plugins/common-plugin-tasks/custom-setup-py-kwargs.mdx
---
    title: Custom `setup_py()` kwargs
    position: 8
---

How to add your own logic to `setup_py()`.

---

By default, Pants will simply copy the kwargs (keyword arguments) used in the `provides=setup_py()` field in the BUILD file when running the `package` goal on a `python_distribution`.

You can instead write a plugin to add your own logic to what kwargs are used for the `setup()` function to do any of these things:

- Reduce boilerplate by hardcoding common kwargs.
- Read from the file system to dynamically determine kwargs, such as the `long_description` or `version`.
- Run processes like `git` to dynamically determine kwargs like `version`.

Note: regardless of if you wrote a plugin or not, Pants will automatically set some kwargs like `install_requires` and `namespace_packages` based on analyzing your code.

:::note Example
See [here](https://github.com/pantsbuild/pants/blob/master/pants-plugins/internal_plugins/releases/register.py) for an example that Pants uses internally for its `python_distribution` targets. This plugin demonstrates reading from the file system to set the `version` and `long_description` kwargs, along with adding hardcoded kwargs.

:::

## 1. Set up a subclass of `SetupKwargsRequest`

Set the class method `is_applicable()` to determine whether your implementation should be used for the particular `python_distribution` target. If `False`, Pants will use the default implementation which simply uses the explicitly provided `setup_py` from the BUILD file.

In this example, we will always use our custom implementation:

```python
from pants.backend.python.goals.setup_py import SetupKwargsRequest
from pants.engine.target import Target

class CustomSetupKwargsRequest(SetupKwargsRequest):
    @classmethod
    def is_applicable(cls, _: Target) -> bool:
        return True
```

This example will only use our plugin implementation for `python_distribution` targets defined in the folder `src/python/project1`.

```python
class CustomSetupKwargsRequest(SetupKwargsRequest):
    @classmethod
    def is_applicable(cls, target: Target) -> bool:
        return target.address.spec.startswith("src/python/project1")
```

Then, register your new `SetupKwargsRequest ` with a [`UnionRule`](../the-rules-api/union-rules-advanced.mdx) so that Pants knows your implementation exists:

```python
from pants.engine.rules import collect_rules
from pants.engine.unions import UnionRule

...

def rules():
    return [
      	*collect_rules(),
        UnionRule(SetupKwargsRequest, CustomSetupKwargsRequest),
    ]
```

:::note Consider defining custom `python_distribution` target types
If you don't want to always use a single custom implementation, an effective approach could be to create custom `python_distribution` target types so that your users decide which implementation they want to use in their BUILD files.

For example, a user could do this:

```python
pants_python_distribution(
   name="my-dist",
   dependencies=[...],
   provides=setup_py(...)
)

pants_contrib_python_distribution(
   name="my-dist",
   dependencies=[...],
   provides=setup_py(...)
)
```

To support this workflow, [create new target types](https://www.pantsbuild.org/v2.0/docs/target-api-new-targets).

```python
class PantsPythonDistribution(Target):
   alias = "pants_python_distribution"
   core_fields = PythonDistribution.core_fields

class PantsContribPythonDistribution(Target):
   alias = "pants_contrib_python_distribution"
   core_fields = PythonDistribution.core_fields
```

Then, for each `SetupKwargsRequest` subclass, check which target type was used:

```python
class PantsSetupKwargsRequest(SetupKwargsRequest):
    @classmethod
    def is_applicable(cls, target: Target) -> bool:
        return isinstance(target, PantsPythonDistribution)
```

:::

## 2. Create a rule with your logic

Your rule should take as a parameter the `SetupKwargsRequest ` from step 1. This type has two fields: `target: Target` and `explicit_kwargs: Dict[str, Any]`. You can use these fields to get more information on the target you are generating a `setup.py` for.

Your rule should return `SetupKwargs`, which takes two arguments: `kwargs: Dict[str, Any]` and `address: Address`.

For example, this will simply hardcode a kwarg:

```python
from pants.backend.python.goals.setup_py import SetupKwargs
from pants.engine.rules import rule

@rule
async def setup_kwargs_plugin(request: CustomSetupKwargsRequest) -> SetupKwargs:
    return SetupKwargs(
        {**request.explicit_kwargs, "plugin_demo": "hello world"}, address=request.target.address
    )
```

Update your plugin's `register.py` to activate this file's rules.

```python title="pants-plugins/python_plugins/register.py"
from python_plugins import custom_setup_py

def rules():
   return custom_setup_py.rules()
```

Then, temporarily delete any `setup_py_commands` from the `python_distribution` target, run `./pants package path/to:python_distribution`, and inspect the generated `setup.py` in the resulting folder to confirm that your plugin worked correctly.

Often, you will want to read from a file in your project to set kwargs like `version` or `long_description`. Use `await Get(DigestContents, PathGlobs)` to do this (see [File system](../the-rules-api/file-system.mdx)):

```python
from pants.backend.python.goals.setup_py import SetupKwargs
from pants.engine.fs import DigestContents, GlobMatchErrorBehavior, PathGlobs
from pants.engine.rules import rule

@rule
async def setup_kwargs_plugin(request: CustomSetupKwargsRequest) -> SetupKwargs:
    digest_contents = await Get(
        DigestContents,
        PathGlobs(
            ["project/ABOUT.rst"],
            description_of_origin="`setup_py()` plugin",
            glob_match_error_behavior=GlobMatchErrorBehavior.error,
        ),
    )
    about_page_content = digest_contents[0].content.decode()
    return SetupKwargs(
        {**request.explicit_kwargs, "long_description": "\n".join(about_page_content)},
        address=request.target.address
    )
```

Refer to these guides for additional things you may want to do in your plugin:

- [Read from options](../the-rules-api/options-and-subsystems.mdx). Also see [here](https://github.com/pantsbuild/pants/blob/master/pants-plugins/internal_plugins/releases/register.py) for an example.
- [Read values from the target](../the-rules-api/rules-and-the-target-api.mdx) using the Target API.
- [Run a `Process`](../the-rules-api/processes.mdx), such as `git`. Also see [Installing tools](../the-rules-api/installing-tools.mdx).
